--- a/slideshow.html
+++ b/slideshow.html
@@ -5,21 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Najine Slike</title>
   <style>
-    body {
+     body {
       margin: 0;
-      padding: 0;
+      padding: 20px;
       font-family: "Segoe UI", sans-serif;
       background: #fce9ef;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      overflow: hidden;
+      min-height: 100vh;
+    }
+
+    @media (max-width: 600px) {
+      .slideshow-container {
+        width: 100%;
+        max-width: 100%;
+        min-height: 200px;
+
+      }
     }
 
     .slideshow-container {
       width: 90%;
       max-width: 600px;
+      min-height: 200px;
       position: relative;
       border-radius: 15px;
       overflow: hidden;
@@ -156,3 +165,4 @@
 
 </body>
 </html>
+
