Fix HTML encoding issues in slideshow.html

--- a/slideshow.html
+++ b/slideshow.html
@@ -74,16 +74,16 @@
 
   <div class="slideshow-container">
     <div class="slide active">
-      <img src="images/slika1.jpeg" alt="Slika 1" />
+      <img src="images/slika1.JPEG" alt="Slika 1" />
     </div>
     <div class="slide">
-      <img src="images/slika2.jpeg" alt="Slika 2" />
+      <img src="images/slika2.JPEG" alt="Slika 2" />
     </div>
     <div class="slide">
-      <img src="images/slika3.jpeg" alt="Slika 3" />
+      <img src="images/slika3.JPEG" alt="Slika 3" />
     </div>
     <div class="slide">
-      <img src="images/slika4.jpeg" alt="Slika 3" />
+      <img src="images/slika4.JPEG" alt="Slika 3" />
     </div>
     <div class="slide">
       <img src="images/slika5.JPEG" alt="Slika 3" />
@@ -163,5 +163,6 @@
 
 </body>
 </html>
+
 
 
